tdf#129879 Fix wrong order of buttons

Change-Id: I0cb135c5b8298fd7c5579673d0eaff7068a03842
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86426
Tested-by: Jenkins
Reviewed-by: Tomáš Chvátal <tchvatal@suse.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>