vcl/source/window/layout.cxx
@@ -718,8 +718,8 @@ static int getButtonPriority(const OString &rType)
     const OUString &rEnv = Application::GetDesktopEnvironment();
 
     if (rEnv.equalsIgnoreAsciiCase("windows") ||
-        rEnv.equalsIgnoreAsciiCase("tde") ||
-        rEnv.startsWithIgnoreAsciiCase("kde"))
+        rEnv.equalsIgnoreAsciiCase("lxqt") ||
+        rEnv.startsWithIgnoreAsciiCase("plasma"))
     {
         pOrder = &aSaveDiscardCancel[0];
     }
